--- a/UIDesigner/Food_add_dialog_ui.ui
+++ b/UIDesigner/Food_add_dialog_ui.ui
@@ -28,7 +28,7 @@
   <property name="windowTitle">
    <string>Food Add Dialog</string>
   </property>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="foodDai_ok_bt">
    <property name="geometry">
     <rect>
      <x>580</x>
@@ -46,7 +46,7 @@
     <string>Ok</string>
    </property>
   </widget>
-  <widget class="QScrollArea" name="scrollArea">
+  <widget class="QScrollArea" name="foodDai_scrollArea">
    <property name="geometry">
     <rect>
      <x>40</x>
@@ -67,50 +67,24 @@
       <height>479</height>
      </rect>
     </property>
-    <widget class="QLabel" name="label_2">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>20</y>
-       <width>231</width>
-       <height>21</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>TextLabel</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="pushButton_3">
-     <property name="geometry">
-      <rect>
-       <x>252</x>
-       <y>20</y>
-       <width>71</width>
-       <height>28</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>add</string>
-     </property>
-    </widget>
    </widget>
   </widget>
-  <widget class="QLineEdit" name="lineEdit">
+  <widget class="QLineEdit" name="foodDai_search_textEdit">
    <property name="geometry">
     <rect>
      <x>140</x>
      <y>30</y>
-     <width>201</width>
+     <width>171</width>
      <height>31</height>
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
+  <widget class="QPushButton" name="foodDai_search_bt">
    <property name="geometry">
     <rect>
-     <x>350</x>
+     <x>310</x>
      <y>30</y>
-     <width>41</width>
+     <width>31</width>
      <height>31</height>
     </rect>
    </property>
@@ -136,7 +110,7 @@
     <string>search</string>
    </property>
   </widget>
-  <widget class="QScrollArea" name="scrollArea_2">
+  <widget class="QScrollArea" name="foodDai_user_scrollArea">
    <property name="geometry">
     <rect>
      <x>410</x>
@@ -157,33 +131,20 @@
       <height>409</height>
      </rect>
     </property>
-    <widget class="QPushButton" name="pushButton_4">
-     <property name="geometry">
-      <rect>
-       <x>182</x>
-       <y>20</y>
-       <width>61</width>
-       <height>28</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Delete</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_3">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>20</y>
-       <width>161</width>
-       <height>21</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>TextLabel</string>
-     </property>
-    </widget>
    </widget>
+  </widget>
+  <widget class="QPushButton" name="foodDai_clear_bt">
+   <property name="geometry">
+    <rect>
+     <x>350</x>
+     <y>30</y>
+     <width>41</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>clear</string>
+   </property>
   </widget>
  </widget>
  <resources/>
