--- a/UIDesigner/Register_page_ui_2.ui
+++ b/UIDesigner/Register_page_ui_2.ui
@@ -28,10 +28,10 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>100</y>
-     <width>270</width>
-     <height>260</height>
+     <x>130</x>
+     <y>130</y>
+     <width>371</width>
+     <height>421</height>
     </rect>
    </property>
    <property name="palette">
@@ -459,15 +459,15 @@
   <widget class="QPushButton" name="Register_save_bt">
    <property name="geometry">
     <rect>
-     <x>930</x>
-     <y>770</y>
-     <width>121</width>
-     <height>51</height>
+     <x>130</x>
+     <y>680</y>
+     <width>151</width>
+     <height>71</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>16</pointsize>
+     <pointsize>24</pointsize>
     </font>
    </property>
    <property name="text">
@@ -477,15 +477,15 @@
   <widget class="QPushButton" name="Register_back_bt">
    <property name="geometry">
     <rect>
-     <x>1080</x>
-     <y>770</y>
-     <width>121</width>
-     <height>51</height>
+     <x>350</x>
+     <y>680</y>
+     <width>151</width>
+     <height>71</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>16</pointsize>
+     <pointsize>24</pointsize>
     </font>
    </property>
    <property name="text">
@@ -495,8 +495,8 @@
   <widget class="QLabel" name="label_9">
    <property name="geometry">
     <rect>
-     <x>95</x>
-     <y>475</y>
+     <x>665</x>
+     <y>195</y>
      <width>151</width>
      <height>40</height>
     </rect>
@@ -513,9 +513,9 @@
   <widget class="QLineEdit" name="Register_Lname_textEdit">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>490</y>
-     <width>181</width>
+     <x>840</x>
+     <y>200</y>
+     <width>137</width>
      <height>22</height>
     </rect>
    </property>
@@ -535,22 +535,35 @@
   <widget class="QLabel" name="label_10">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>550</y>
-     <width>371</width>
+     <x>660</x>
+     <y>270</y>
+     <width>321</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>--------------------------------------------------------------------------------------------------------------------------------</string>
+    <string>----------------------------------------------------------------</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_11">
+   <property name="geometry">
+    <rect>
+     <x>660</x>
+     <y>440</y>
+     <width>321</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>----------------------------------------------------------------</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="Register_passWord_textEdit">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>657</y>
-     <width>181</width>
+     <x>845</x>
+     <y>372</y>
+     <width>137</width>
      <height>22</height>
     </rect>
    </property>
@@ -564,8 +577,8 @@
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
-     <x>550</x>
-     <y>160</y>
+     <x>670</x>
+     <y>540</y>
      <width>118</width>
      <height>40</height>
     </rect>
@@ -579,11 +592,45 @@
     <string>Gender</string>
    </property>
   </widget>
+  <widget class="QLineEdit" name="Register_weight_textEdit">
+   <property name="geometry">
+    <rect>
+     <x>850</x>
+     <y>663</y>
+     <width>137</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>16777215</width>
+     <height>30</height>
+    </size>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_7">
+   <property name="geometry">
+    <rect>
+     <x>670</x>
+     <y>653</y>
+     <width>97</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>20</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>weight</string>
+   </property>
+  </widget>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>550</x>
-     <y>90</y>
+     <x>670</x>
+     <y>480</y>
      <width>131</width>
      <height>40</height>
     </rect>
@@ -600,8 +647,8 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>95</x>
-     <y>405</y>
+     <x>665</x>
+     <y>125</y>
      <width>151</width>
      <height>40</height>
     </rect>
@@ -618,9 +665,9 @@
   <widget class="QLineEdit" name="Register_Fname_textEdit">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>420</y>
-     <width>181</width>
+     <x>840</x>
+     <y>130</y>
+     <width>137</width>
      <height>22</height>
     </rect>
    </property>
@@ -637,12 +684,46 @@
     </size>
    </property>
   </widget>
+  <widget class="QLineEdit" name="Register_height_textEdit">
+   <property name="geometry">
+    <rect>
+     <x>850</x>
+     <y>720</y>
+     <width>137</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>16777215</width>
+     <height>30</height>
+    </size>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_8">
+   <property name="geometry">
+    <rect>
+     <x>670</x>
+     <y>710</y>
+     <width>90</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>20</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>height</string>
+   </property>
+  </widget>
   <widget class="QLineEdit" name="Register_userName_textEdit">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>600</y>
-     <width>181</width>
+     <x>845</x>
+     <y>315</y>
+     <width>137</width>
      <height>22</height>
     </rect>
    </property>
@@ -656,8 +737,8 @@
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>647</y>
+     <x>670</x>
+     <y>367</y>
      <width>160</width>
      <height>40</height>
     </rect>
@@ -674,8 +755,8 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>590</y>
+     <x>670</x>
+     <y>310</y>
      <width>168</width>
      <height>40</height>
     </rect>
@@ -692,31 +773,41 @@
   <widget class="QLabel" name="label_15">
    <property name="geometry">
     <rect>
-     <x>530</x>
-     <y>230</y>
-     <width>371</width>
+     <x>660</x>
+     <y>610</y>
+     <width>321</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>--------------------------------------------------------------------------------------------------------------------------------</string>
+    <string>----------------------------------------------------------------</string>
    </property>
   </widget>
   <widget class="QDateEdit" name="Register_Bday_dateEdit">
    <property name="geometry">
     <rect>
-     <x>730</x>
-     <y>100</y>
-     <width>151</width>
+     <x>850</x>
+     <y>490</y>
+     <width>131</width>
      <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QTextEdit" name="show_textEdit">
+   <property name="geometry">
+    <rect>
+     <x>1030</x>
+     <y>130</y>
+     <width>221</width>
+     <height>611</height>
     </rect>
    </property>
   </widget>
   <widget class="QRadioButton" name="Register_Gender_Female_radioBT">
    <property name="geometry">
     <rect>
-     <x>730</x>
-     <y>170</y>
+     <x>850</x>
+     <y>550</y>
      <width>71</width>
      <height>20</height>
     </rect>
@@ -728,272 +819,14 @@
   <widget class="QRadioButton" name="Register_Gender_Male_radioBT">
    <property name="geometry">
     <rect>
-     <x>830</x>
-     <y>170</y>
+     <x>850</x>
+     <y>580</y>
      <width>95</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
     <string>Male</string>
-   </property>
-  </widget>
-  <widget class="QDateEdit" name="Register_dateEdit">
-   <property name="geometry">
-    <rect>
-     <x>1080</x>
-     <y>310</y>
-     <width>110</width>
-     <height>31</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_7">
-   <property name="geometry">
-    <rect>
-     <x>920</x>
-     <y>380</y>
-     <width>55</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>20</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>Kg</string>
-   </property>
-  </widget>
-  <widget class="QComboBox" name="Register_start_weight_cb">
-   <property name="geometry">
-    <rect>
-     <x>820</x>
-     <y>310</y>
-     <width>61</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_8">
-   <property name="geometry">
-    <rect>
-     <x>990</x>
-     <y>290</y>
-     <width>55</width>
-     <height>61</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>24</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>On</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_12">
-   <property name="geometry">
-    <rect>
-     <x>550</x>
-     <y>380</y>
-     <width>251</width>
-     <height>61</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>20</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>Current weight</string>
-   </property>
-  </widget>
-  <widget class="QComboBox" name="Register_current_weight_cb">
-   <property name="geometry">
-    <rect>
-     <x>820</x>
-     <y>400</y>
-     <width>61</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_13">
-   <property name="geometry">
-    <rect>
-     <x>550</x>
-     <y>550</y>
-     <width>251</width>
-     <height>61</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>20</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>Goal weight</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_14">
-   <property name="geometry">
-    <rect>
-     <x>550</x>
-     <y>460</y>
-     <width>251</width>
-     <height>61</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>20</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>Height</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_16">
-   <property name="geometry">
-    <rect>
-     <x>550</x>
-     <y>640</y>
-     <width>251</width>
-     <height>61</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>20</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>Amount</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_17">
-   <property name="geometry">
-    <rect>
-     <x>540</x>
-     <y>290</y>
-     <width>251</width>
-     <height>61</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>20</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string> Starting weight</string>
-   </property>
-  </widget>
-  <widget class="QComboBox" name="Register_height_cb">
-   <property name="geometry">
-    <rect>
-     <x>820</x>
-     <y>480</y>
-     <width>61</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QComboBox" name="Register_goal_weight_cb">
-   <property name="geometry">
-    <rect>
-     <x>820</x>
-     <y>570</y>
-     <width>61</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_18">
-   <property name="geometry">
-    <rect>
-     <x>920</x>
-     <y>550</y>
-     <width>55</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>20</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>Kg</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_19">
-   <property name="geometry">
-    <rect>
-     <x>920</x>
-     <y>290</y>
-     <width>55</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>20</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>Kg</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_20">
-   <property name="geometry">
-    <rect>
-     <x>920</x>
-     <y>460</y>
-     <width>55</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>20</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>Cm</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_21">
-   <property name="geometry">
-    <rect>
-     <x>920</x>
-     <y>640</y>
-     <width>201</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>20</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>Kg  per  Week</string>
-   </property>
-  </widget>
-  <widget class="QComboBox" name="Register_amount_cb">
-   <property name="geometry">
-    <rect>
-     <x>820</x>
-     <y>660</y>
-     <width>61</width>
-     <height>21</height>
-    </rect>
    </property>
   </widget>
  </widget>
