--- a/UIDesigner/Edit_page_ui.ui
+++ b/UIDesigner/Edit_page_ui.ui
@@ -28,8 +28,8 @@
   <widget class="QPushButton" name="EditPro_save_bt">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>660</y>
+     <x>930</x>
+     <y>600</y>
      <width>161</width>
      <height>71</height>
     </rect>
@@ -38,6 +38,9 @@
     <font>
      <pointsize>24</pointsize>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {background-color:#4d79ff; border-style: outset; border-width: 2px; border-radius: 20px; border-color: beige;color:white;}</string>
    </property>
    <property name="text">
     <string>Save</string>
@@ -46,8 +49,8 @@
   <widget class="QPushButton" name="EditPro_back_bt">
    <property name="geometry">
     <rect>
-     <x>360</x>
-     <y>660</y>
+     <x>700</x>
+     <y>600</y>
      <width>161</width>
      <height>71</height>
     </rect>
@@ -57,6 +60,9 @@
      <pointsize>24</pointsize>
     </font>
    </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {background-color:#4d79ff; border-style: outset; border-width: 2px; border-radius: 20px; border-color: beige;color:white;}</string>
+   </property>
    <property name="text">
     <string>Back</string>
    </property>
@@ -64,14 +70,15 @@
   <widget class="QLabel" name="label_9">
    <property name="geometry">
     <rect>
-     <x>665</x>
-     <y>195</y>
-     <width>151</width>
+     <x>735</x>
+     <y>270</y>
+     <width>181</width>
      <height>40</height>
     </rect>
    </property>
    <property name="font">
     <font>
+     <family>Yu Gothic UI Light</family>
      <pointsize>20</pointsize>
     </font>
    </property>
@@ -82,8 +89,8 @@
   <widget class="QLineEdit" name="EditPro_Lname_textEdit">
    <property name="geometry">
     <rect>
-     <x>840</x>
-     <y>200</y>
+     <x>930</x>
+     <y>280</y>
      <width>137</width>
      <height>22</height>
     </rect>
@@ -104,21 +111,8 @@
   <widget class="QLabel" name="label_10">
    <property name="geometry">
     <rect>
-     <x>660</x>
-     <y>270</y>
-     <width>321</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>----------------------------------------------------------------</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_11">
-   <property name="geometry">
-    <rect>
-     <x>660</x>
-     <y>440</y>
+     <x>730</x>
+     <y>340</y>
      <width>321</width>
      <height>16</height>
     </rect>
@@ -130,8 +124,8 @@
   <widget class="QLineEdit" name="EditPro_passWord_textEdit">
    <property name="geometry">
     <rect>
-     <x>845</x>
-     <y>372</y>
+     <x>930</x>
+     <y>460</y>
      <width>137</width>
      <height>22</height>
     </rect>
@@ -141,89 +135,20 @@
      <width>16777215</width>
      <height>30</height>
     </size>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_6">
-   <property name="geometry">
-    <rect>
-     <x>670</x>
-     <y>540</y>
-     <width>118</width>
-     <height>40</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>20</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>Gender</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="EditPro_weight_textEdit">
-   <property name="geometry">
-    <rect>
-     <x>850</x>
-     <y>663</y>
-     <width>137</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <property name="maximumSize">
-    <size>
-     <width>16777215</width>
-     <height>30</height>
-    </size>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_7">
-   <property name="geometry">
-    <rect>
-     <x>670</x>
-     <y>653</y>
-     <width>97</width>
-     <height>40</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>20</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>weight</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_3">
-   <property name="geometry">
-    <rect>
-     <x>670</x>
-     <y>480</y>
-     <width>131</width>
-     <height>40</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>20</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>Birthday</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>665</x>
-     <y>125</y>
-     <width>151</width>
+     <x>735</x>
+     <y>205</y>
+     <width>181</width>
      <height>40</height>
     </rect>
    </property>
    <property name="font">
     <font>
+     <family>Yu Gothic UI Light</family>
      <pointsize>20</pointsize>
     </font>
    </property>
@@ -234,8 +159,8 @@
   <widget class="QLineEdit" name="EditPro_Fname_textEdit">
    <property name="geometry">
     <rect>
-     <x>840</x>
-     <y>130</y>
+     <x>930</x>
+     <y>220</y>
      <width>137</width>
      <height>22</height>
     </rect>
@@ -253,45 +178,11 @@
     </size>
    </property>
   </widget>
-  <widget class="QLineEdit" name="EditPro_height_textEdit">
-   <property name="geometry">
-    <rect>
-     <x>850</x>
-     <y>720</y>
-     <width>137</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <property name="maximumSize">
-    <size>
-     <width>16777215</width>
-     <height>30</height>
-    </size>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_8">
-   <property name="geometry">
-    <rect>
-     <x>670</x>
-     <y>710</y>
-     <width>90</width>
-     <height>40</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>20</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>height</string>
-   </property>
-  </widget>
   <widget class="QLineEdit" name="EditPro_userName_textEdit">
    <property name="geometry">
     <rect>
-     <x>845</x>
-     <y>315</y>
+     <x>930</x>
+     <y>400</y>
      <width>137</width>
      <height>22</height>
     </rect>
@@ -306,14 +197,15 @@
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>670</x>
-     <y>367</y>
+     <x>740</x>
+     <y>447</y>
      <width>160</width>
      <height>40</height>
     </rect>
    </property>
    <property name="font">
     <font>
+     <family>Yu Gothic UI Light</family>
      <pointsize>20</pointsize>
     </font>
    </property>
@@ -324,14 +216,15 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>670</x>
-     <y>310</y>
+     <x>740</x>
+     <y>390</y>
      <width>168</width>
      <height>40</height>
     </rect>
    </property>
    <property name="font">
     <font>
+     <family>Yu Gothic UI Light</family>
      <pointsize>20</pointsize>
     </font>
    </property>
@@ -339,78 +232,135 @@
     <string>Username: </string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_15">
-   <property name="geometry">
-    <rect>
-     <x>660</x>
-     <y>610</y>
-     <width>321</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>----------------------------------------------------------------</string>
-   </property>
-  </widget>
-  <widget class="QDateEdit" name="EditPro_Bday_dateEdit">
-   <property name="geometry">
-    <rect>
-     <x>850</x>
-     <y>490</y>
-     <width>131</width>
-     <height>31</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QTextEdit" name="show_textEdit">
-   <property name="geometry">
-    <rect>
-     <x>1030</x>
-     <y>130</y>
-     <width>221</width>
-     <height>611</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QRadioButton" name="EditPro_Gender_Female_radioBT">
-   <property name="geometry">
-    <rect>
-     <x>850</x>
-     <y>550</y>
-     <width>71</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Female</string>
-   </property>
-  </widget>
-  <widget class="QRadioButton" name="EditPro_Gender_Male_radioBT">
-   <property name="geometry">
-    <rect>
-     <x>850</x>
-     <y>580</y>
-     <width>95</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Male</string>
-   </property>
-  </widget>
   <widget class="QPushButton" name="EditPro_pic_bt">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>130</y>
-     <width>370</width>
-     <height>410</height>
+     <x>190</x>
+     <y>140</y>
+     <width>341</width>
+     <height>311</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>14</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
    <property name="text">
-    <string>PushButton</string>
+    <string>PICTURE</string>
    </property>
   </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>-90</x>
+     <y>570</y>
+     <width>1441</width>
+     <height>121</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel {background-color : #b3d9ff;}</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>670</x>
+     <y>50</y>
+     <width>441</width>
+     <height>481</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel {background-color : #b3d9ff;}</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_6">
+   <property name="geometry">
+    <rect>
+     <x>800</x>
+     <y>100</y>
+     <width>241</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Segoe UI Emoji</family>
+     <pointsize>22</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Edit Profile</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_7">
+   <property name="geometry">
+    <rect>
+     <x>-30</x>
+     <y>-60</y>
+     <width>1471</width>
+     <height>1111</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel {background-color : white;}</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="error_login">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>610</y>
+     <width>551</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>18</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel {color:red;}</string>
+   </property>
+   <property name="text">
+    <string>You must fill all information !</string>
+   </property>
+  </widget>
+  <zorder>label_7</zorder>
+  <zorder>label_3</zorder>
+  <zorder>label</zorder>
+  <zorder>EditPro_save_bt</zorder>
+  <zorder>EditPro_back_bt</zorder>
+  <zorder>label_9</zorder>
+  <zorder>EditPro_Lname_textEdit</zorder>
+  <zorder>label_10</zorder>
+  <zorder>EditPro_passWord_textEdit</zorder>
+  <zorder>label_2</zorder>
+  <zorder>EditPro_Fname_textEdit</zorder>
+  <zorder>EditPro_userName_textEdit</zorder>
+  <zorder>label_5</zorder>
+  <zorder>label_4</zorder>
+  <zorder>EditPro_pic_bt</zorder>
+  <zorder>label_6</zorder>
+  <zorder>error_login</zorder>
  </widget>
  <resources/>
  <connections/>
