--- a/UIDesigner/Exercise_add_dialog_ui.ui
+++ b/UIDesigner/Exercise_add_dialog_ui.ui
@@ -6,42 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1378</width>
+    <width>1280</width>
     <height>860</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QPushButton" name="exerciseDai_save_bt">
-   <property name="geometry">
-    <rect>
-     <x>910</x>
-     <y>710</y>
-     <width>131</width>
-     <height>61</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>14</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QPushButton {background-color:#4d79ff; border-style: outset; border-width: 2px; border-radius: 20px; border-color: beige;color:white;}</string>
-   </property>
-   <property name="text">
-    <string>Save</string>
-   </property>
-  </widget>
   <widget class="QPushButton" name="exerciseDai_add_bt">
    <property name="geometry">
     <rect>
-     <x>910</x>
-     <y>250</y>
-     <width>131</width>
+     <x>1040</x>
+     <y>580</y>
+     <width>141</width>
      <height>61</height>
     </rect>
    </property>
@@ -62,15 +39,14 @@
   <widget class="QPushButton" name="exerciseDai_back_bt">
    <property name="geometry">
     <rect>
-     <x>910</x>
-     <y>90</y>
+     <x>1040</x>
+     <y>80</y>
      <width>131</width>
-     <height>51</height>
+     <height>61</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <family>Microsoft YaHei Light</family>
      <pointsize>14</pointsize>
      <weight>75</weight>
      <bold>true</bold>
@@ -81,6 +57,171 @@
    </property>
    <property name="text">
     <string>back</string>
+   </property>
+  </widget>
+  <widget class="QScrollArea" name="exerciseDai_scrollArea">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>230</y>
+     <width>751</width>
+     <height>541</height>
+    </rect>
+   </property>
+   <property name="widgetResizable">
+    <bool>true</bool>
+   </property>
+   <widget class="QWidget" name="scrollAreaWidgetContents">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>749</width>
+      <height>539</height>
+     </rect>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QComboBox" name="exerciseDai_search_cb">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>91</y>
+     <width>531</width>
+     <height>41</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="exerciseDai_delete_bt">
+   <property name="geometry">
+    <rect>
+     <x>1040</x>
+     <y>680</y>
+     <width>141</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>14</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {background-color:#4d79ff; border-style: outset; border-width: 2px; border-radius: 20px; border-color: beige;color:white;}&lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
+&lt;ui version=&quot;4.0&quot;&gt;
+ &lt;widget name=&quot;__qt_fake_top_level&quot;&gt;
+  &lt;widget class=&quot;QLabel&quot; name=&quot;label_3&quot;&gt;
+   &lt;property name=&quot;geometry&quot;&gt;
+    &lt;rect&gt;
+     &lt;x&gt;-40&lt;/x&gt;
+     &lt;y&gt;-50&lt;/y&gt;
+     &lt;width&gt;1421&lt;/width&gt;
+     &lt;height&gt;961&lt;/height&gt;
+    &lt;/rect&gt;
+   &lt;/property&gt;
+   &lt;property name=&quot;styleSheet&quot;&gt;
+    &lt;string notr=&quot;true&quot;&gt;QLabel {background-color:#1f1f2e;}&lt;/string&gt;
+   &lt;/property&gt;
+   &lt;property name=&quot;text&quot;&gt;
+    &lt;string/&gt;
+   &lt;/property&gt;
+  &lt;/widget&gt;
+ &lt;/widget&gt;
+ &lt;resources/&gt;
+&lt;/ui&gt;
+</string>
+   </property>
+   <property name="text">
+    <string>Delete</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="exerciseDai_min_cb">
+   <property name="geometry">
+    <rect>
+     <x>700</x>
+     <y>90</y>
+     <width>71</width>
+     <height>41</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>800</x>
+     <y>100</y>
+     <width>91</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel {color:white;}</string>
+   </property>
+   <property name="text">
+    <string>minutes</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>980</x>
+     <y>-30</y>
+     <width>251</width>
+     <height>931</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel {background-color : #b3d9ff;}</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>-70</x>
+     <y>-30</y>
+     <width>1421</width>
+     <height>961</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel {background-color:#1f1f2e;}</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>30</y>
+     <width>621</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>MS Gothic</family>
+     <pointsize>16</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel {color:white;}</string>
+   </property>
+   <property name="text">
+    <string>Our recommended exercise for you :</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
@@ -107,129 +248,17 @@
     <string>Your favorite exercise list :</string>
    </property>
   </widget>
-  <widget class="QScrollArea" name="exerciseDai_scrollArea">
-   <property name="geometry">
-    <rect>
-     <x>140</x>
-     <y>230</y>
-     <width>611</width>
-     <height>541</height>
-    </rect>
-   </property>
-   <property name="widgetResizable">
-    <bool>true</bool>
-   </property>
-   <widget class="QWidget" name="scrollAreaWidgetContents">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>609</width>
-      <height>539</height>
-     </rect>
-    </property>
-   </widget>
-  </widget>
-  <widget class="QComboBox" name="exerciseDai_search_cb">
-   <property name="geometry">
-    <rect>
-     <x>140</x>
-     <y>91</y>
-     <width>611</width>
-     <height>41</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="exerciseDai_delete_bt">
-   <property name="geometry">
-    <rect>
-     <x>910</x>
-     <y>360</y>
-     <width>131</width>
-     <height>61</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>14</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QPushButton {background-color:#4d79ff; border-style: outset; border-width: 2px; border-radius: 20px; border-color: beige;color:white;}</string>
-   </property>
-   <property name="text">
-    <string>Delete</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_4">
-   <property name="geometry">
-    <rect>
-     <x>140</x>
-     <y>30</y>
-     <width>541</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>MS Gothic</family>
-     <pointsize>16</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QLabel {color:white;}</string>
-   </property>
-   <property name="text">
-    <string>Our recommended exercise for you :</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_3">
-   <property name="geometry">
-    <rect>
-     <x>-40</x>
-     <y>-50</y>
-     <width>1421</width>
-     <height>961</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QLabel {background-color:#1f1f2e;}</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>850</x>
-     <y>-50</y>
-     <width>251</width>
-     <height>931</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QLabel {background-color : #b3d9ff;}</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-  </widget>
+  <zorder>label_4</zorder>
   <zorder>label_3</zorder>
-  <zorder>label</zorder>
-  <zorder>exerciseDai_save_bt</zorder>
   <zorder>exerciseDai_add_bt</zorder>
   <zorder>exerciseDai_back_bt</zorder>
-  <zorder>label_2</zorder>
   <zorder>exerciseDai_scrollArea</zorder>
   <zorder>exerciseDai_search_cb</zorder>
   <zorder>exerciseDai_delete_bt</zorder>
-  <zorder>label_4</zorder>
+  <zorder>exerciseDai_min_cb</zorder>
   <zorder>label</zorder>
+  <zorder>label_5</zorder>
+  <zorder>label_2</zorder>
  </widget>
  <resources/>
  <connections/>
