--- a/UIDesigner/MainPageUI.ui
+++ b/UIDesigner/MainPageUI.ui
@@ -78,7 +78,7 @@
     <bool>false</bool>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="Main_profile">
    <property name="geometry">
     <rect>
      <x>120</x>
@@ -502,6 +502,11 @@
      </disabled>
     </palette>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
    <property name="autoFillBackground">
     <bool>false</bool>
    </property>
@@ -524,7 +529,7 @@
    <property name="font">
     <font>
      <family>System</family>
-     <pointsize>22</pointsize>
+     <pointsize>20</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
@@ -572,7 +577,7 @@
    <property name="font">
     <font>
      <family>Microsoft YaHei Light</family>
-     <pointsize>14</pointsize>
+     <pointsize>11</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
@@ -581,7 +586,7 @@
     <string notr="true">QPushButton {background-color:#99bbff; border-style: outset; border-width: 2px; border-radius: 20px; border-color: beige;}</string>
    </property>
    <property name="text">
-    <string> Add Exercise</string>
+    <string> Add Food</string>
    </property>
   </widget>
   <widget class="QLabel" name="Main_food_cal">
@@ -1010,7 +1015,7 @@
    </property>
    <property name="font">
     <font>
-     <pointsize>28</pointsize>
+     <pointsize>18</pointsize>
     </font>
    </property>
    <property name="layoutDirection">
@@ -1458,7 +1463,7 @@
    </property>
    <property name="font">
     <font>
-     <pointsize>28</pointsize>
+     <pointsize>18</pointsize>
     </font>
    </property>
    <property name="layoutDirection">
@@ -1492,7 +1497,7 @@
    <property name="font">
     <font>
      <family>Microsoft YaHei Light</family>
-     <pointsize>14</pointsize>
+     <pointsize>11</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
@@ -1501,7 +1506,7 @@
     <string notr="true">QPushButton {background-color:#99bbff; border-style: outset; border-width: 2px; border-radius: 20px; border-color: beige;}</string>
    </property>
    <property name="text">
-    <string>Add Food</string>
+    <string>Add Exercise</string>
    </property>
   </widget>
   <widget class="QPushButton" name="Main_ex_bt">
@@ -1980,7 +1985,7 @@
    <property name="geometry">
     <rect>
      <x>910</x>
-     <y>430</y>
+     <y>440</y>
      <width>211</width>
      <height>71</height>
     </rect>
@@ -2402,7 +2407,7 @@
    </property>
    <property name="font">
     <font>
-     <pointsize>36</pointsize>
+     <pointsize>18</pointsize>
     </font>
    </property>
    <property name="layoutDirection">
@@ -2436,7 +2441,7 @@
    <property name="font">
     <font>
      <family>Yu Gothic UI Semibold</family>
-     <pointsize>24</pointsize>
+     <pointsize>18</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
@@ -2896,19 +2901,6 @@
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QProgressBar" name="progressBar">
-   <property name="geometry">
-    <rect>
-     <x>610</x>
-     <y>330</y>
-     <width>621</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="value">
-    <number>24</number>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
@@ -2948,7 +2940,7 @@ border-color:#4d94ff;}</string>
     <rect>
      <x>710</x>
      <y>40</y>
-     <width>401</width>
+     <width>441</width>
      <height>71</height>
     </rect>
    </property>
@@ -2983,11 +2975,11 @@ border-color:#4d94ff;}</string>
     <string/>
    </property>
   </widget>
-  <widget class="QProgressBar" name="progressBar_2">
+  <widget class="QProgressBar" name="progressBar_food">
    <property name="geometry">
     <rect>
-     <x>610</x>
-     <y>290</y>
+     <x>600</x>
+     <y>320</y>
      <width>621</width>
      <height>23</height>
     </rect>
@@ -3018,27 +3010,194 @@ border-color:#4d94ff;}</string>
   <widget class="QLabel" name="label_9">
    <property name="geometry">
     <rect>
-     <x>550</x>
+     <x>540</x>
      <y>290</y>
-     <width>53</width>
-     <height>16</height>
+     <width>111</width>
+     <height>20</height>
     </rect>
    </property>
-   <property name="text">
-    <string>Food</string>
+   <property name="palette">
+    <palette>
+     <active>
+      <colorrole role="WindowText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>52</green>
+         <blue>55</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Text">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>52</green>
+         <blue>55</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="BrightText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>68</green>
+         <blue>62</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="ButtonText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>52</green>
+         <blue>55</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Base">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>47</green>
+         <blue>47</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Window">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>240</red>
+         <green>163</green>
+         <blue>39</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </active>
+     <inactive>
+      <colorrole role="WindowText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>52</green>
+         <blue>55</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Text">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>52</green>
+         <blue>55</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="BrightText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>68</green>
+         <blue>62</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="ButtonText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>52</green>
+         <blue>55</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Base">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>47</green>
+         <blue>47</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Window">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>240</red>
+         <green>163</green>
+         <blue>39</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </inactive>
+     <disabled>
+      <colorrole role="WindowText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>52</green>
+         <blue>55</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Text">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>52</green>
+         <blue>55</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="BrightText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>68</green>
+         <blue>62</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="ButtonText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>52</green>
+         <blue>55</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Base">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>240</red>
+         <green>163</green>
+         <blue>39</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Window">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>240</red>
+         <green>163</green>
+         <blue>39</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </disabled>
+    </palette>
    </property>
-  </widget>
-  <widget class="QLabel" name="label_10">
-   <property name="geometry">
-    <rect>
-     <x>550</x>
-     <y>330</y>
-     <width>53</width>
-     <height>16</height>
-    </rect>
+   <property name="font">
+    <font>
+     <pointsize>11</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel{color:rgb(255, 52, 55)}</string>
    </property>
    <property name="text">
-    <string>Exercise</string>
+    <string>Net/Goal</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_11">
@@ -3046,7 +3205,7 @@ border-color:#4d94ff;}</string>
     <rect>
      <x>930</x>
      <y>520</y>
-     <width>181</width>
+     <width>221</width>
      <height>20</height>
     </rect>
    </property>
@@ -3083,16 +3242,16 @@ border-color:#4d94ff;}</string>
   <widget class="QLabel" name="label_14">
    <property name="geometry">
     <rect>
-     <x>170</x>
+     <x>140</x>
      <y>50</y>
-     <width>201</width>
+     <width>251</width>
      <height>71</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Segoe UI Historic</family>
-     <pointsize>24</pointsize>
+     <pointsize>26</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
@@ -3102,6 +3261,43 @@ border-color:#4d94ff;}</string>
    </property>
    <property name="text">
     <string>My Profile</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="Main_logout">
+   <property name="geometry">
+    <rect>
+     <x>1080</x>
+     <y>770</y>
+     <width>141</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Microsoft YaHei Light</family>
+     <pointsize>11</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {background-color:#99bbff; border-style: outset; border-width: 2px; border-radius: 20px; border-color: beige;}</string>
+   </property>
+   <property name="text">
+    <string>Log out</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>560</x>
+     <y>320</y>
+     <width>41</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>0%</string>
    </property>
   </widget>
   <zorder>label_7</zorder>
@@ -3121,15 +3317,15 @@ border-color:#4d94ff;}</string>
   <zorder>Main_sum_cal</zorder>
   <zorder>Main_goal_bt</zorder>
   <zorder>label_5</zorder>
-  <zorder>progressBar</zorder>
-  <zorder>label</zorder>
-  <zorder>progressBar_2</zorder>
+  <zorder>Main_profile</zorder>
+  <zorder>progressBar_food</zorder>
   <zorder>label_9</zorder>
-  <zorder>label_10</zorder>
   <zorder>label_11</zorder>
   <zorder>label_12</zorder>
   <zorder>label_13</zorder>
   <zorder>label_14</zorder>
+  <zorder>Main_logout</zorder>
+  <zorder>label</zorder>
  </widget>
  <resources/>
  <connections/>
